--- a/template.html
+++ b/template.html
@@ -1,37 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template - Utilizar como modelo</title>
-    <link rel="stylesheet" href="base.css">
-</head>
-<body>
+    <link rel="stylesheet" href="base.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="menu">
-            <!-- Aqui vai o seu menu -->
-            <ul>
-                <li><a href="#">Link</a></li>
-            </ul>
+      <div class="menu">
+        <!-- Aqui vai o seu menu -->
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Horários de Atendimento</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </div>
+
+      <div class="main">
+        <div class="header">
+          <img
+            src="https://images.unsplash.com/photo-1511766443616-f41c8cadf015?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fGRlbnRpc3R8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60
+            alt=""
+          />
         </div>
 
-        <div class="main">
-            <div class="header">
-                Header
-                <!-- Aqui vai o seu header -->
-            </div>
-    
-            <div class="content">
-                Content
-                <!-- Aqui vai o seu conteúdo -->
-            </div>
-    
-            <div class="footer">
-                Footer
-                <!-- Aqui vai o seu rodapé -->
-            </div>
+        <div class="content">
+          <!-- Aqui vai o seu conteúdo -->
+          <ul>
+            <li>
+              <img
+                src="https://www.odontocompany.com/img/site/Shield-icon.png"
+                alt=""
+              />
+              <span
+                >Maior rede de clínicas do mundo com
+                <strong>mais de mil unidades</strong></span
+              >
+            </li>
+
+            <li>
+              <img
+                src="https://www.odontocompany.com/img/site/Tooth-icon.png"
+                alt=""
+              />
+              <span
+                ><strong>Mais de 1 milhão de brasileiros</strong> fizeram seus
+                implantes dentários em clínicas Odontocompany</span
+              >
+            </li>
+            <li>
+              <img
+                src="https://www.odontocompany.com/img/site/Team-icon.png"
+                alt=""
+              />
+              <span
+                >Clínica com equipe <strong> Multidisciplinar</strong>
+              </span>
+            </li>
+            <li>
+              <img
+                src="https://www.odontocompany.com/img/site/Chair-icon.png"
+                alt=""
+              />
+              <span
+                ><strong>Ambiente familiar</strong>. Higienizado só para
+                você</span
+              >
+            </li>
+          </ul>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/2Ur1aYz7-HA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <p>
+            Somos uma rede de clínicas odontológicas completa atendendo a
+            diversas áreas da odontologia atual e moderna
+          </p>
+          <div class="banner">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ5A8nCiPW7VBOmVOwW_fY7pvfofSY2gmXdkA&usqp=CAU"
+              alt=""
+            />
+          </div>
+          <p>
+            Encontre a OdontoCompany mais próxima de você e agende agora sua
+            avaliação!
+          </p>
+          <button><a href="">Agendar avaliação</a></button>
         </div>
+
+        <div class="footer">
+          <img src="https://odontocompany.com/img/site/logo_2022.png" alt="" />
+          <address>
+            OdontoCompany Franchising: <br />
+            CRO-12195 Responsável Técnico: Paulo Youssef Zahr CD <br />
+            Responsável: CRO-44508
+          </address>
+          <!-- Aqui vai o seu rodapé -->
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
