--- a/template.html
+++ b/template.html
@@ -15,15 +15,14 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Sobre</a></li>
           <li><a href="#">Horários de Atendimento</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
 
       <div class="main">
         <div class="header">
           <img
-            src="https://images.unsplash.com/photo-1511766443616-f41c8cadf015?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjh8fGRlbnRpc3R8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60
-            alt=""
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSL1RUNx0gSOuFwy3qmidbHywkDHtM2hlzrmQ&usqp=CAU"
           />
         </div>
 
