--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="">Sobre</a></li>
+          <li><a href="/sobre.html">Sobre</a></li>
           <li><a href="">Horarios</a></li>
           <li><a href="">Contato</a></li>
         </ul>
