--- a/sobre.html
+++ b/sobre.html
@@ -19,9 +19,9 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-          <li><a href="">Sobre</a></li>
-          <li><a href="">Horarios</a></li>
-          <li><a href="/contato.html">Contato</a></li>
+          <li><a href="/sobre.html">Sobre</a></li>
+          <li><a href="/horarios.html">Horarios</a></li>
+          <li><a href="">Contato</a></li>
         </ul>
       </nav>
     </header>
