--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/sobre.html">Sobre</a></li>
-          <li><a href="">Horarios</a></li>
+          <li><a href="/horarios.html">Horarios</a></li>
           <li><a href="">Contato</a></li>
         </ul>
       </nav>
